# log-analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup.sh
dags/: job_airflow.py
dags/jobs/: medalhao.yaml
data/: dummy_logs.txt
examples/: config.yaml.example  docker-compose.override.yml.example
notebooks/: 01_run_pipeline.ipynb  02_analysis.ipynb
src/log_analyzer/: __init__.py  __main__.py  cli.py  main.py
src/log_analyzer/core/: config.py  io.py  io_common.py  spark.py
src/log_analyzer/etl/: __init__.py  analyzer.py  extractor.py  load.py  simple_pipeline.py  transformer.py
tests/core/: test_config.py  test_io.py  test_io_common.py  test_spark.py
tests/etl/: test_simple_pipeline.py
